# terminal-zero-governance-control-plane

./: .dockerignore  .gitignore  .sop_config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAY_2_EOD_REPORT.md  DAY_4_EOD_REPORT.md  DAY_5_EOD_REPORT.md  Dockerfile  FILE_LIST.txt  GOVERNANCE.md  IMPLEMENTATION_REPORT.md  LICENSE  NEXT_WORK.md  OPERATOR_LOOP_GUIDE.md  README.md  RELEASE_NOTES_v0.1.0_PUBLIC_BETA.md  RELEASING.md  SECURITY.md  SUPPORT.md  TAKEOVER_LATEST.md  THESIS_PULL_LATEST.md  USER_GUIDE.md  _fix_track3.py  constraints-dev.txt  docker-compose.yml  extension_allowlist.yaml  generate_report.py  pyproject.toml  pyproject.toml.raw.txt  pytest_rfc_out.txt  requirements-dev.txt  requirements.txt  top_level_PM.md
.github/: CODEOWNERS  (+1 more)
docs/archive/cleanup/20260314_235801/filesystem_snapshot/: .sop_config.yaml  OPERATOR_LOOP_GUIDE.md  README.md  extension_allowlist.yaml  pyproject.toml
docs/archive/cleanup/20260314_235801/filesystem_snapshot/benchmark/: subagent_routing_matrix.yaml
docs/archive/cleanup/20260314_235801/filesystem_snapshot/docs/: ARTIFACT_POLICY.md  decision log.md  next_phase_plan.md
docs/archive/cleanup/20260314_235801/filesystem_snapshot/scripts/: measure_context_reduction.py  run_baseline_benchmark.py  validate_routing_matrix.py  validate_skill_activation.py
docs/archive/cleanup/20260314_235801/filesystem_snapshot/skills/: registry.yaml
docs/archive/cleanup/20260314_235801/filesystem_snapshot/tests/: test_phase5_benchmark.py  test_print_takeover_entrypoint.py  test_subagent_routing.py
(+796 files in other folders)
