[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-zero-governance"
version = "0.1.0"
description = "Script-driven AI engineering governance control plane."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Terminal Zero Maintainers" }]
dependencies = [
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[project.scripts]
sop = "sop.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sop = ["py.typed", "scripts/**", "templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
